--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
 	</head>
 	<body>
 		<nav>
-			<div class="nav-wrapper navbar-size">
-			  <a href="#" class="brand-logo"><img class="user-image-size" src="images/Image1.png" /></a>
-			  <ul id="nav-mobile" class="right hide-on-med-and-down">
-				<li><a target="_blank" href="https://fairwaycosmetics.lk/">FairWay</a></li>
-			  </ul>
-			</div>
+      <div class="nav-wrapper navbar-size">
+        <a href="#" class="brand-logo"><img class="user-image-size" src="images/Image1.png" /></a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a target="_blank" href="https://fairwaycosmetics.lk/">FairWay</a></li>
+        </ul>
+      </div>
+  </nav>
 
 		<main class="main-body">
 			<div class="container">
 				<div class="row">
 					<div class="col s12 center-align">
-						<h1 id="heading">Welcome to SIT 725 Week 3</h1>
+						<h1 id="heading">Welcome to SIT 725 Week 4</h1>
 						<p class="flow-text">This is a demo application that tries to use a few components from materialize and through this practical we try to have some fun with Materialize and its
 							components
 						</p>
